[gd_scene load_steps=10 format=3 uid="uid://dg4a4cpnf2g7c"]

[ext_resource type="Script" path="res://scripts/tile/tile.gd" id="1_2epi8"]
[ext_resource type="Shader" path="res://shaders/tile/tile_grid.gdshader" id="1_6xbi6"]
[ext_resource type="Texture2D" uid="uid://pv2w066aa8ch" path="res://assets/textures/tile/stone/normal_stone.png" id="2_b7eb2"]

[sub_resource type="PlaneMesh" id="PlaneMesh_mhr4j"]
resource_local_to_scene = true
size = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fhrh7"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_6xbi6")
shader_parameter/hovered = false
shader_parameter/selected = false

[sub_resource type="BoxShape3D" id="BoxShape3D_07qj4"]
size = Vector3(1, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bvfy2"]
size = Vector3(1, 0.5, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nnydu"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
normal_texture = ExtResource("2_b7eb2")

[sub_resource type="BoxShape3D" id="BoxShape3D_fqsag"]
size = Vector3(1, 0.5, 1)

[node name="Tile" type="Node3D"]
script = ExtResource("1_2epi8")

[node name="AreaMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0)
mesh = SubResource("PlaneMesh_mhr4j")
surface_material_override/0 = SubResource("ShaderMaterial_fhrh7")

[node name="AreaCollider" type="Area3D" parent="AreaMesh"]
collision_layer = 8

[node name="AreaCollision" type="CollisionShape3D" parent="AreaMesh/AreaCollider"]
shape = SubResource("BoxShape3D_07qj4")

[node name="Body" type="StaticBody3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Body"]
mesh = SubResource("BoxMesh_bvfy2")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_nnydu")

[node name="BodyCollision" type="CollisionShape3D" parent="Body"]
shape = SubResource("BoxShape3D_fqsag")
